--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "axios": "^1.7.7",
     "framer-motion": "^11.11.17",
-    "react-icons": "^5.3.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
@@ -25,4 +26,3 @@
     "vite": "^5.4.11"
   }
 }
-
