Clean up and organize codebase
- Remove old frontend directory (only Vite build artifacts remained)
- Remove Python __pycache__ directories
- Remove test artifacts and backup files
- Move redundant documentation to docs/archive/
- Update .gitignore with Next.js, Vite, and Python cache entries
- Update start_frontend.sh to use frontend-nextjs
- Update README.md to reflect Next.js migration:
  - Updated project structure
  - Changed all frontend paths from 'frontend' to 'frontend-nextjs'
  - Updated tech stack (Next.js 14, TypeScript 5, Tailwind CSS 4)
  - Updated installation and running instructions
  - Added quick start script references
  - Updated API configuration instructions

Result: Cleaner project structure with proper documentation

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,24 @@ htmlcov/
 *.bak
 *.swp
 *~
+
+# Next.js
+.next/
+out/
+*.tsbuildinfo
+
+# Frontend build artifacts
+.vite/
+dist/
+
+# Python bytecode
+*.pyc
+__pycache__/
+
+# Test artifacts
+test_output.txt
+.pytest_cache/
+
+# Backup files
+*.backup
+*.backup_*
